// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./Pus013LdtPart.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus013Ldt {
extensions 35 to 135;

  optional ccsds_mal.protobuf.TIME startTime = 1;
  optional ccsds_mal.protobuf.TIME endTime = 2;
  optional ccsds_mal.protobuf.UINTEGER transferType = 3;
  optional ccsds_mal.protobuf.UINTEGER lduId = 4;
  optional ccsds_mal.protobuf.UINTEGER status = 5;
  optional ccsds_mal.protobuf.UINTEGER size = 6;
  optional ccsds_mal.protobuf.INTEGER remainingSize = 7;
  optional ccsds_mal.protobuf.UINTEGER percent = 8;
  optional ccsds_mal.protobuf.STRING failureCode = 9;
  optional ccsds_mal.protobuf.UINTEGER fileId = 10;
  optional ccsds_mal.protobuf.UINTEGER partitionId = 11;
  optional ccsds_mal.protobuf.STRING fileChecksum = 12;
  optional ccsds_mal.protobuf.UINTEGER fileTypeCode = 13;
  repeated pusGroundModel.protobuf.Pus013LdtPart pUS013LdtPart = 14;
  optional ccsds_mal.protobuf.UINTEGER noLDTParts = 15;
  optional pusGroundModel.protobuf.PusElement pusElement = 16;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeLduId = 17;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeLduId = 18;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSize = 19;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeSize = 20;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStartTime = 21;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStartTime = 22;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeEndTime = 23;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeEndTime = 24;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 25;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStatus = 26;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeRemainSize = 27;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeRemainSize = 28;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModePercent = 29;
  optional ccsds_mal.protobuf.TIME lastUpdateTimePercent = 30;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFailureCode = 31;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeFailureCode = 32;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileChecksum = 33;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeFileChecksum = 34;
}
